# GeoNum

./: .gitignore  Notes.txt  README.md  cube.off
GeoNum-HalfEdge/: CMakeLists.txt  Makefile  face.cpp  face.h  halfedge.cpp  halfedge.h  main.cpp  mesh.cpp  mesh.h  tangentPlane.cpp  tangentPlane.h  vertex.cpp  vertex.h
